gsl_protocol/grammar/HedgehogProtocolParser.py
# Generated from gsl_protocol/grammar/HedgehogProtocol.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class HedgehogProtocolParser ( Parser ):

    grammarFileName = "HedgehogProtocol.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'nested'", "'repeated'", "'oneof'", "'Python'", 
                     "'TypeScript'", "<INVALID>", "<INVALID>", "'.'", "','", 
                     "':'", "';'", "'/'", "'='", "'*'", "'=>'", "'<='", 
                     "'<-'", "'('", "')'", "'['", "']'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "DOCSTRING", "STRING", "DOT", 
                      "COMMA", "COLON", "SEMI", "SLASH", "EQUALS", "STAR", 
                      "REQ", "REP", "UPD", "LPAREN", "RPAREN", "LBRACKET", 
                      "RBRACKET", "LBRACE", "RBRACE", "IDENTIFIER", "NUMBER", 
                      "COMMENT", "WS" ]

    RULE_model = 0
    RULE_message = 1
    RULE_field = 2
    RULE_oneof = 3
    RULE_languageFieldSpec = 4
    RULE_messageClass = 5
    RULE_paramList = 6
    RULE_mandatoryParam = 7
    RULE_repeatedParam = 8
    RULE_optionalParam = 9
    RULE_qualifiedName = 10
    RULE_qualifiedIdentifier = 11
    RULE_identifier = 12
    RULE_number = 13
    RULE_docstring = 14
    RULE_string = 15
    RULE_direction = 16

    ruleNames =  [ "model", "message", "field", "oneof", "languageFieldSpec", 
                   "messageClass", "paramList", "mandatoryParam", "repeatedParam", 
                   "optionalParam", "qualifiedName", "qualifiedIdentifier", 
                   "identifier", "number", "docstring", "string", "direction" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    DOCSTRING=6
    STRING=7
    DOT=8
    COMMA=9
    COLON=10
    SEMI=11
    SLASH=12
    EQUALS=13
    STAR=14
    REQ=15
    REP=16
    UPD=17
    LPAREN=18
    RPAREN=19
    LBRACKET=20
    RBRACKET=21
    LBRACE=22
    RBRACE=23
    IDENTIFIER=24
    NUMBER=25
    COMMENT=26
    WS=27

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ModelContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(HedgehogProtocolParser.EOF, 0)

        def message(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HedgehogProtocolParser.MessageContext)
            else:
                return self.getTypedRuleContext(HedgehogProtocolParser.MessageContext,i)


        def getRuleIndex(self):
            return HedgehogProtocolParser.RULE_model

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModel" ):
                return visitor.visitModel(self)
            else:
                return visitor.visitChildren(self)




    def model(self):

        localctx = HedgehogProtocolParser.ModelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_model)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==HedgehogProtocolParser.IDENTIFIER:
                self.state = 34
                self.message()
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 40
            self.match(HedgehogProtocolParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MessageContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.discriminator = None # IdentifierContext
            self.label = None # NumberContext

        def qualifiedName(self):
            return self.getTypedRuleContext(HedgehogProtocolParser.QualifiedNameContext,0)


        def EQUALS(self):
            return self.getToken(HedgehogProtocolParser.EQUALS, 0)

        def LBRACE(self):
            return self.getToken(HedgehogProtocolParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(HedgehogProtocolParser.RBRACE, 0)

        def identifier(self):
            return self.getTypedRuleContext(HedgehogProtocolParser.IdentifierContext,0)


        def number(self):
            return self.getTypedRuleContext(HedgehogProtocolParser.NumberContext,0)


        def docstring(self):
            return self.getTypedRuleContext(HedgehogProtocolParser.DocstringContext,0)


        def field(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HedgehogProtocolParser.FieldContext)
            else:
                return self.getTypedRuleContext(HedgehogProtocolParser.FieldContext,i)


        def oneof(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HedgehogProtocolParser.OneofContext)
            else:
                return self.getTypedRuleContext(HedgehogProtocolParser.OneofContext,i)


        def messageClass(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HedgehogProtocolParser.MessageClassContext)
            else:
                return self.getTypedRuleContext(HedgehogProtocolParser.MessageClassContext,i)


        def getRuleIndex(self):
            return HedgehogProtocolParser.RULE_message

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMessage" ):
                return visitor.visitMessage(self)
            else:
                return visitor.visitChildren(self)




    def message(self):

        localctx = HedgehogProtocolParser.MessageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_message)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.qualifiedName()
            self.state = 43
            localctx.discriminator = self.identifier()
            self.state = 44
            self.match(HedgehogProtocolParser.EQUALS)
            self.state = 45
            localctx.label = self.number()
            self.state = 46
            self.match(HedgehogProtocolParser.LBRACE)
            self.state = 48
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HedgehogProtocolParser.DOCSTRING:
                self.state = 47
                self.docstring()


            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << HedgehogProtocolParser.T__0) | (1 << HedgehogProtocolParser.T__1) | (1 << HedgehogProtocolParser.T__2) | (1 << HedgehogProtocolParser.IDENTIFIER))) != 0):
                self.state = 52
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [HedgehogProtocolParser.T__0, HedgehogProtocolParser.T__1, HedgehogProtocolParser.IDENTIFIER]:
                    self.state = 50
                    self.field()
                    pass
                elif token in [HedgehogProtocolParser.T__2]:
                    self.state = 51
                    self.oneof()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << HedgehogProtocolParser.REQ) | (1 << HedgehogProtocolParser.REP) | (1 << HedgehogProtocolParser.UPD))) != 0):
                self.state = 57
                self.messageClass()
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 63
            self.match(HedgehogProtocolParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FieldContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.nested = None # Token
            self.rep = None # Token
            self.fieldType = None # IdentifierContext
            self.name = None # IdentifierContext
            self.label = None # NumberContext

        def EQUALS(self):
            return self.getToken(HedgehogProtocolParser.EQUALS, 0)

        def LBRACE(self):
            return self.getToken(HedgehogProtocolParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(HedgehogProtocolParser.RBRACE, 0)

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HedgehogProtocolParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(HedgehogProtocolParser.IdentifierContext,i)


        def number(self):
            return self.getTypedRuleContext(HedgehogProtocolParser.NumberContext,0)


        def languageFieldSpec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HedgehogProtocolParser.LanguageFieldSpecContext)
            else:
                return self.getTypedRuleContext(HedgehogProtocolParser.LanguageFieldSpecContext,i)


        def getRuleIndex(self):
            return HedgehogProtocolParser.RULE_field

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitField" ):
                return visitor.visitField(self)
            else:
                return visitor.visitChildren(self)




    def field(self):

        localctx = HedgehogProtocolParser.FieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_field)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HedgehogProtocolParser.T__0:
                self.state = 65
                localctx.nested = self.match(HedgehogProtocolParser.T__0)


            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HedgehogProtocolParser.T__1:
                self.state = 68
                localctx.rep = self.match(HedgehogProtocolParser.T__1)


            self.state = 71
            localctx.fieldType = self.identifier()
            self.state = 72
            localctx.name = self.identifier()
            self.state = 73
            self.match(HedgehogProtocolParser.EQUALS)
            self.state = 74
            localctx.label = self.number()
            self.state = 75
            self.match(HedgehogProtocolParser.LBRACE)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==HedgehogProtocolParser.T__3 or _la==HedgehogProtocolParser.T__4:
                self.state = 76
                self.languageFieldSpec()
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 82
            self.match(HedgehogProtocolParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OneofContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # IdentifierContext

        def LBRACE(self):
            return self.getToken(HedgehogProtocolParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(HedgehogProtocolParser.RBRACE, 0)

        def identifier(self):
            return self.getTypedRuleContext(HedgehogProtocolParser.IdentifierContext,0)


        def field(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HedgehogProtocolParser.FieldContext)
            else:
                return self.getTypedRuleContext(HedgehogProtocolParser.FieldContext,i)


        def getRuleIndex(self):
            return HedgehogProtocolParser.RULE_oneof

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOneof" ):
                return visitor.visitOneof(self)
            else:
                return visitor.visitChildren(self)




    def oneof(self):

        localctx = HedgehogProtocolParser.OneofContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_oneof)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(HedgehogProtocolParser.T__2)
            self.state = 85
            localctx.name = self.identifier()
            self.state = 86
            self.match(HedgehogProtocolParser.LBRACE)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << HedgehogProtocolParser.T__0) | (1 << HedgehogProtocolParser.T__1) | (1 << HedgehogProtocolParser.IDENTIFIER))) != 0):
                self.state = 87
                self.field()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 93
            self.match(HedgehogProtocolParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LanguageFieldSpecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return HedgehogProtocolParser.RULE_languageFieldSpec

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class TypeScriptSpecContext(LanguageFieldSpecContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HedgehogProtocolParser.LanguageFieldSpecContext
            super().__init__(parser)
            self.typ = None # StringContext
            self.default = None # StringContext
            self.copyFrom(ctx)

        def COLON(self):
            return self.getToken(HedgehogProtocolParser.COLON, 0)
        def SEMI(self):
            return self.getToken(HedgehogProtocolParser.SEMI, 0)
        def string(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HedgehogProtocolParser.StringContext)
            else:
                return self.getTypedRuleContext(HedgehogProtocolParser.StringContext,i)

        def COMMA(self):
            return self.getToken(HedgehogProtocolParser.COMMA, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeScriptSpec" ):
                return visitor.visitTypeScriptSpec(self)
            else:
                return visitor.visitChildren(self)


    class PythonSpecContext(LanguageFieldSpecContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HedgehogProtocolParser.LanguageFieldSpecContext
            super().__init__(parser)
            self.typ = None # StringContext
            self.default = None # StringContext
            self.copyFrom(ctx)

        def COLON(self):
            return self.getToken(HedgehogProtocolParser.COLON, 0)
        def SEMI(self):
            return self.getToken(HedgehogProtocolParser.SEMI, 0)
        def string(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HedgehogProtocolParser.StringContext)
            else:
                return self.getTypedRuleContext(HedgehogProtocolParser.StringContext,i)

        def COMMA(self):
            return self.getToken(HedgehogProtocolParser.COMMA, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPythonSpec" ):
                return visitor.visitPythonSpec(self)
            else:
                return visitor.visitChildren(self)



    def languageFieldSpec(self):

        localctx = HedgehogProtocolParser.LanguageFieldSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_languageFieldSpec)
        self._la = 0 # Token type
        try:
            self.state = 113
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [HedgehogProtocolParser.T__3]:
                localctx = HedgehogProtocolParser.PythonSpecContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.match(HedgehogProtocolParser.T__3)
                self.state = 96
                self.match(HedgehogProtocolParser.COLON)
                self.state = 97
                localctx.typ = self.string()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==HedgehogProtocolParser.COMMA:
                    self.state = 98
                    self.match(HedgehogProtocolParser.COMMA)
                    self.state = 99
                    localctx.default = self.string()


                self.state = 102
                self.match(HedgehogProtocolParser.SEMI)
                pass
            elif token in [HedgehogProtocolParser.T__4]:
                localctx = HedgehogProtocolParser.TypeScriptSpecContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.match(HedgehogProtocolParser.T__4)
                self.state = 105
                self.match(HedgehogProtocolParser.COLON)
                self.state = 106
                localctx.typ = self.string()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==HedgehogProtocolParser.COMMA:
                    self.state = 107
                    self.match(HedgehogProtocolParser.COMMA)
                    self.state = 108
                    localctx.default = self.string()


                self.state = 111
                self.match(HedgehogProtocolParser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MessageClassContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def direction(self):
            return self.getTypedRuleContext(HedgehogProtocolParser.DirectionContext,0)


        def qualifiedName(self):
            return self.getTypedRuleContext(HedgehogProtocolParser.QualifiedNameContext,0)


        def LPAREN(self):
            return self.getToken(HedgehogProtocolParser.LPAREN, 0)

        def paramList(self):
            return self.getTypedRuleContext(HedgehogProtocolParser.ParamListContext,0)


        def RPAREN(self):
            return self.getToken(HedgehogProtocolParser.RPAREN, 0)

        def SEMI(self):
            return self.getToken(HedgehogProtocolParser.SEMI, 0)

        def docstring(self):
            return self.getTypedRuleContext(HedgehogProtocolParser.DocstringContext,0)


        def getRuleIndex(self):
            return HedgehogProtocolParser.RULE_messageClass

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMessageClass" ):
                return visitor.visitMessageClass(self)
            else:
                return visitor.visitChildren(self)




    def messageClass(self):

        localctx = HedgehogProtocolParser.MessageClassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_messageClass)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.direction()
            self.state = 116
            self.qualifiedName()
            self.state = 117
            self.match(HedgehogProtocolParser.LPAREN)
            self.state = 118
            self.paramList()
            self.state = 119
            self.match(HedgehogProtocolParser.RPAREN)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==HedgehogProtocolParser.DOCSTRING:
                self.state = 120
                self.docstring()


            self.state = 123
            self.match(HedgehogProtocolParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mandatoryParam(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HedgehogProtocolParser.MandatoryParamContext)
            else:
                return self.getTypedRuleContext(HedgehogProtocolParser.MandatoryParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(HedgehogProtocolParser.COMMA)
            else:
                return self.getToken(HedgehogProtocolParser.COMMA, i)

        def repeatedParam(self):
            return self.getTypedRuleContext(HedgehogProtocolParser.RepeatedParamContext,0)


        def LBRACKET(self):
            return self.getToken(HedgehogProtocolParser.LBRACKET, 0)

        def optionalParam(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HedgehogProtocolParser.OptionalParamContext)
            else:
                return self.getTypedRuleContext(HedgehogProtocolParser.OptionalParamContext,i)


        def RBRACKET(self):
            return self.getToken(HedgehogProtocolParser.RBRACKET, 0)

        def getRuleIndex(self):
            return HedgehogProtocolParser.RULE_paramList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = HedgehogProtocolParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.state = 178
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [HedgehogProtocolParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.mandatoryParam()
                self.state = 130
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 126
                        self.match(HedgehogProtocolParser.COMMA)
                        self.state = 127
                        self.mandatoryParam() 
                    self.state = 132
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

                self.state = 135
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
                if la_ == 1:
                    self.state = 133
                    self.match(HedgehogProtocolParser.COMMA)
                    self.state = 134
                    self.repeatedParam()


                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==HedgehogProtocolParser.COMMA:
                    self.state = 137
                    self.match(HedgehogProtocolParser.COMMA)
                    self.state = 138
                    self.match(HedgehogProtocolParser.LBRACKET)
                    self.state = 139
                    self.optionalParam()
                    self.state = 144
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==HedgehogProtocolParser.COMMA:
                        self.state = 140
                        self.match(HedgehogProtocolParser.COMMA)
                        self.state = 141
                        self.optionalParam()
                        self.state = 146
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 147
                    self.match(HedgehogProtocolParser.RBRACKET)


                pass
            elif token in [HedgehogProtocolParser.STAR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.repeatedParam()
                self.state = 164
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==HedgehogProtocolParser.COMMA:
                    self.state = 152
                    self.match(HedgehogProtocolParser.COMMA)
                    self.state = 153
                    self.match(HedgehogProtocolParser.LBRACKET)
                    self.state = 154
                    self.optionalParam()
                    self.state = 159
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==HedgehogProtocolParser.COMMA:
                        self.state = 155
                        self.match(HedgehogProtocolParser.COMMA)
                        self.state = 156
                        self.optionalParam()
                        self.state = 161
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 162
                    self.match(HedgehogProtocolParser.RBRACKET)


                pass
            elif token in [HedgehogProtocolParser.LBRACKET]:
                self.enterOuterAlt(localctx, 3)
                self.state = 166
                self.match(HedgehogProtocolParser.LBRACKET)
                self.state = 167
                self.optionalParam()
                self.state = 172
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==HedgehogProtocolParser.COMMA:
                    self.state = 168
                    self.match(HedgehogProtocolParser.COMMA)
                    self.state = 169
                    self.optionalParam()
                    self.state = 174
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 175
                self.match(HedgehogProtocolParser.RBRACKET)
                pass
            elif token in [HedgehogProtocolParser.RPAREN]:
                self.enterOuterAlt(localctx, 4)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MandatoryParamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(HedgehogProtocolParser.IdentifierContext,0)


        def getRuleIndex(self):
            return HedgehogProtocolParser.RULE_mandatoryParam

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMandatoryParam" ):
                return visitor.visitMandatoryParam(self)
            else:
                return visitor.visitChildren(self)




    def mandatoryParam(self):

        localctx = HedgehogProtocolParser.MandatoryParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_mandatoryParam)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RepeatedParamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STAR(self):
            return self.getToken(HedgehogProtocolParser.STAR, 0)

        def identifier(self):
            return self.getTypedRuleContext(HedgehogProtocolParser.IdentifierContext,0)


        def getRuleIndex(self):
            return HedgehogProtocolParser.RULE_repeatedParam

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRepeatedParam" ):
                return visitor.visitRepeatedParam(self)
            else:
                return visitor.visitChildren(self)




    def repeatedParam(self):

        localctx = HedgehogProtocolParser.RepeatedParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_repeatedParam)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 182
            self.match(HedgehogProtocolParser.STAR)
            self.state = 183
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OptionalParamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HedgehogProtocolParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(HedgehogProtocolParser.IdentifierContext,i)


        def SLASH(self, i:int=None):
            if i is None:
                return self.getTokens(HedgehogProtocolParser.SLASH)
            else:
                return self.getToken(HedgehogProtocolParser.SLASH, i)

        def getRuleIndex(self):
            return HedgehogProtocolParser.RULE_optionalParam

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOptionalParam" ):
                return visitor.visitOptionalParam(self)
            else:
                return visitor.visitChildren(self)




    def optionalParam(self):

        localctx = HedgehogProtocolParser.OptionalParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_optionalParam)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            self.identifier()
            self.state = 190
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==HedgehogProtocolParser.SLASH:
                self.state = 186
                self.match(HedgehogProtocolParser.SLASH)
                self.state = 187
                self.identifier()
                self.state = 192
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class QualifiedNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.path = None # QualifiedIdentifierContext
            self.fileName = None # IdentifierContext
            self.name = None # IdentifierContext

        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(HedgehogProtocolParser.DOT)
            else:
                return self.getToken(HedgehogProtocolParser.DOT, i)

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HedgehogProtocolParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(HedgehogProtocolParser.IdentifierContext,i)


        def qualifiedIdentifier(self):
            return self.getTypedRuleContext(HedgehogProtocolParser.QualifiedIdentifierContext,0)


        def getRuleIndex(self):
            return HedgehogProtocolParser.RULE_qualifiedName

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQualifiedName" ):
                return visitor.visitQualifiedName(self)
            else:
                return visitor.visitChildren(self)




    def qualifiedName(self):

        localctx = HedgehogProtocolParser.QualifiedNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_qualifiedName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 196
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,22,self._ctx)
            if la_ == 1:
                self.state = 193
                localctx.path = self.qualifiedIdentifier()
                self.state = 194
                self.match(HedgehogProtocolParser.DOT)


            self.state = 198
            localctx.fileName = self.identifier()
            self.state = 199
            self.match(HedgehogProtocolParser.DOT)
            self.state = 200
            localctx.name = self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class QualifiedIdentifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
